# fred-pipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
infra/: budget.tf  main.tf  s3.tf  variables.tf
pipeline/fred_ingest/: __init__.py
tests/: test_fred_ingest.py
