[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fred-irr-pipeline"
version = "0.1.0"
description = "Governed IRR feature pipeline on public FRED rate data"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0",
    "duckdb>=0.10",
    "pyarrow>=14.0",
    "dagster>=1.7",
    "dagster-webserver>=1.7",
    "boto3>=1.34",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]